# qt_practice

./: README.md
AlexSP0/Lesson_014_dynamic_widgets/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  widgetgenerator.cpp  widgetgenerator.h
AlexSP0/breakout_game/: CMakeLists.txt  ball.cpp  ball.h  breakout.cpp  breakout.h  brick.cpp  brick.h  main.cpp  paddle.cpp  paddle.h
AlexSP0/qml_example/: CMakeLists.txt  main.cpp  qmlexamplemain.qml  res.qrc
AlexSP0/qt_custom_widget/: CMakeLists.txt  application.h  main.cpp  widget.cpp  widget.h
AlexSP0/qt_painting/: CMakeLists.txt  main.cpp
AlexSP0/qt_painting/qtpaintlib/: colours.cpp  colours.h  donut.cpp  donut.h  lineargradients.cpp  lineargradients.h  lines.cpp  lines.h  patterns.cpp  patterns.h  puff.cpp  puff.h  radialgradient.cpp  radialgradient.h  shapes.cpp  shapes.h  transparentrectangles.cpp  transparentrectangles.h
AlexSP0/qt_snake/: CMakeLists.txt  main.cpp  snake.cpp  snake.h
AlexSP0/qt_widgets/: CMakeLists.txt  comboboxex.cpp  comboboxex.h  label.cpp  label.h  ledit.cpp  ledit.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  slider.cpp  slider.h  spinbox.cpp  spinbox.h  statusbar.cpp  statusbar.h
AlexSP0/qtdbus/: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
AlexSP0/qttestlib-tutorial1/: CMakeLists.txt  main.cpp  readme.md  test.cpp  test.h
AlexSP0/skipping_tests/: .gitignore  CMakeLists.txt  test.cpp  test.h
AlexSP0/sourcetrail/: README.md  sourcetrail.uml
AlexSP0/tutorial2_data_driven_test/: CMakeLists.txt  test.cpp  test.h
AlexSP0/tutorial3_simulate_gui_evets/: CMakeLists.txt  mainwindow.ui  test.cpp  test.h
AlexSP0/tutorial4_replaying_gui_events/: CMakeLists.txt  test.cpp  test.h
AlexSP0/tuturial5_writing_benchmark/: CMakeLists.txt  test.cpp  test.h
AntProBasealt/build-lesson_01-Desktop-Release/: lesson_01
AntProBasealt/build-lesson_01-Desktop-Release/.cmake/api/v1/reply/: cache-v2-6fc9d7daf95c67e6f3b2.json  codemodel-v2-d9ae71257036dec93723.json  index-2022-06-02T08-31-54-0127.json  target-lesson_01_autogen-Release-e02f3b440033eddda10a.json
AntProBasealt/build-lesson_012-Desktop-Release/: CMakeCache.txt  Makefile  cmake_install.cmake  lesson_012
AntProBasealt/build-lesson_012-Desktop-Release/.cmake/api/v1/reply/: cache-v2-b12c23ab8a1b6d6c1457.json  cmakeFiles-v1-fedb4166a2683059d638.json  (+3 more)
AntProBasealt/build-lesson_012-Desktop-Release/lesson_012_autogen/EWIEGA46WW/: moc_mainwindow.cpp
AntProBasealt/build-lesson_02-Desktop-Release/: CMakeCache.txt  Makefile  cmake_install.cmake  lesson_02
AntProBasealt/build-lesson_02-Desktop-Release/lesson_02_autogen/EWIEGA46WW/: moc_mainwindow.cpp
AntProBasealt/build-lesson_02-Desktop-Release/lesson_02_autogen/include/: ui_mainwindow.h
AntProBasealt/build-unit_test-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  tutorial1
AntProBasealt/build-unit_test-Desktop-Debug/tutorial1_autogen/: moc_predefs.h  mocs_compilation.cpp
AntProBasealt/build-unit_test-Desktop-Debug/tutorial1_autogen/EWIEGA46WW/: moc_gui.cpp  moc_gui_test.cpp  moc_main.cpp
AntProBasealt/build-unit_test-Desktop-u0412u044bu043fu0443u0441u043a/: CMakeCache.txt
AntProBasealt/lesson_01/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
AntProBasealt/lesson_011/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
AntProBasealt/lesson_012/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
AntProBasealt/lesson_02/: CMakeLists.txt  Makefile  mainwindow.cpp  mainwindow.h  mainwindow.ui
AntProBasealt/unit_test/: CMakeLists.txt  gui.h  gui_test.h  main.cpp  main.h  mainprog.h
build-lesson_01-Desktop-Release/: CMakeCache.txt  Makefile  cmake_install.cmake
build-lesson_01-Desktop-Release/.cmake/api/v1/reply/: cmakeFiles-v1-9f99050ff89c79c152df.json  target-lesson_01-Release-4325d24b99d2f85dc96b.json
build-lesson_01-Desktop-Release/lesson_01_autogen/: moc_predefs.h
build-lesson_01-Desktop-Release/lesson_01_autogen/include/: ui_mainwindow.h
build-lesson_012-Desktop-Release/: CMakeCache.txt  Makefile  cmake_install.cmake  lesson_012
build-lesson_012-Desktop-Release/.cmake/api/v1/reply/: cache-v2-1039f21b31f747c1f4a3.json  cmakeFiles-v1-9fdbb5b39066558ad687.json  codemodel-v2-94e5dcbef81cfc788a2d.json  index-2022-07-11T10-47-06-0572.json  target-lesson_012-Release-bf788b702373d488182a.json  target-lesson_012_autogen-Release-18267f74f6c8ce350f7e.json
plugin/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fileselector.cpp  fileselector.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  plugin
plugin/.cmake/api/v1/reply/: cache-v2-ba9ff7302122ebd4b7d4.json  cmakeFiles-v1-e4aed2d40e0cd634668e.json  codemodel-v2-45e4675957d46d42dd05.json  index-2022-08-31T14-10-04-0651.json  target-plugin-Debug-081d9c8d90b9789cd668.json  target-plugin_autogen-Debug-735ba652a96856c8ef13.json
plugin/plugin_autogen/: moc_predefs.h  mocs_compilation.cpp
plugin/plugin_autogen/EWIEGA46WW/: moc_fileselector.cpp
plugin/plugin_autogen/include/: ui_mainwindow.h
plugin2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mainwindow.ui
plugin2/.cmake/api/v1/reply/: cache-v2-2a6eaf0dca3553f4e7df.json  cmakeFiles-v1-5d095b069b6303f5268d.json  codemodel-v2-adb30ee8105f5c0fb2a0.json  index-2022-08-31T13-22-12-0135.json  target-plugin2-Debug-3a24a0e5ec36962387de.json  target-plugin2_autogen-Debug-cd57502f365d497eff31.json
plugin2/plugin2_autogen/include/: ui_mainwindow.h
test-example/: CMakeLists.txt  test.cpp  test.h
test-example/build-test-example/: CMakeCache.txt  Makefile  cmake_install.cmake  test_example
test-example/build-test-example/.cmake/api/v1/reply/: cache-v2-b06a4c60e45431ff7ab6.json  cmakeFiles-v1-734b7a0f57cc49fa7cf4.json  codemodel-v2-6b5d39d07adbf91306cd.json  index-2022-08-11T13-46-24-0127.json  target-test_example-Debug-ee109dbe544543577695.json  target-test_example_autogen-Debug-dcb83dfdb09c35b05078.json
test-example/build-test-example/test_example_autogen/: moc_predefs.h
test-example/build-test-example/test_example_autogen/EWIEGA46WW/: moc_test.cpp
(+18 files in other folders)
